View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024640 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-02-19 08:52 | 2014-05-05 13:38 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.7.1 | Fixed in Version | 6.7.1 | ||
Summary | 0024640: Broken logic of check of variable for zero in IntCurvesFace_Intersector constructor | ||||
Description | In constructor of IntCurvesFace_Intersector class, the value of the variable dB is used as divisor before it is checked for being null. This causes FPE exception division-by-zero, in case when it is null. The problem has been detected in test bugs step bug55 when testing fix of #22598, see 0022598:0027950; it occurs during translation of STEP file (shape fix), however the shape has not been saved thus no data for direct test case are available. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Fix pushed to CR24640, please review |
|
OK |
|
Dear BugMaster, Branch CR24640 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 647d63b9bcbcc43f323f5aaf3caeca61d01d4a4a Number of compiler warnings: occt component : Linux: 29 (29 on master) Windows: 0 (0 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 382515488 / 383419896 Total CPU difference: 42452.81999999998 / 42572.35999999976 Testing on Windows: Total MEMORY difference: 429328532 / 429063576 Total CPU difference: 33209.015625 / 33299.265625 There are not differences in images found by testdiff. |
occt: master 7eb732b6 2014-02-19 04:54:49
Committer: apn Details Diff |
0024640: Broken logic of check of variable for zero in IntCurvesFace_Intersector constructor The check is fixed to avoid FPE division by zero |
Affected Issues 0024640 |
|
mod - src/IntCurvesFace/IntCurvesFace_Intersector.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-02-19 08:52 |
|
New Issue | |
2014-02-19 08:52 |
|
Assigned To | => ifv |
2014-02-19 08:55 |
|
Note Added: 0027954 | |
2014-02-19 08:55 |
|
Status | new => resolved |
2014-02-19 09:57 |
|
Note Added: 0027955 | |
2014-02-19 09:57 |
|
Status | resolved => reviewed |
2014-02-19 10:39 |
|
Assigned To | ifv => mkv |
2014-02-19 15:38 |
|
Note Added: 0027966 | |
2014-02-19 15:38 |
|
Test case number | => Not needed |
2014-02-19 15:38 |
|
Assigned To | mkv => bugmaster |
2014-02-19 15:38 |
|
Status | reviewed => tested |
2014-02-24 12:44 | apn | Changeset attached | => occt master 7eb732b6 |
2014-02-24 12:44 | apn | Assigned To | bugmaster => apn |
2014-02-24 12:44 | apn | Status | tested => verified |
2014-02-24 12:44 | apn | Resolution | open => fixed |
2014-05-05 13:34 |
|
Status | verified => closed |
2014-05-05 13:38 |
|
Fixed in Version | => 6.7.1 |