0024640: Broken logic of check of variable for zero in IntCurvesFace_Intersector constructor

The check is fixed to avoid FPE division by zero